--- a/maps.html
+++ b/maps.html
@@ -6,7 +6,7 @@
     <title>Project 3: Sayleht Varela</title>
 	<script src="js/script.js" defer></script>
 	<script async defer
-	  <src=""https://maps.googleapis.com/maps/api/js?key=AIzaSyAgkDD7MTYdqzSIS-_dWtXssATlF-BsTXc">
+	  <src="""https://maps.googleapis.com/maps/api/js?AIzaSyCwJr5USznwiorNYj1zJ-ooKX4Bd-IABCQ>">
 	</script>
     <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
