--- a/abeltesfaye.html
+++ b/abeltesfaye.html
@@ -19,6 +19,7 @@
               <li><a href="index.html">ABOUT ME</a></li>
               <li><a href="abeltesfaye.html">THE WEEKND</a></li>
               <li><a href="resume.html">RESUME</a></li>
+			  <li><a href="maps.html">GOOGLE MAPS</a></li>
             </ul>
           </nav>
         </header>
