--- a/maps.html
+++ b/maps.html
@@ -6,7 +6,7 @@
   <title>Project 3: Sayleht Varela</title>
   <script src="js/script.js" defer></script>
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?AIzaSyCwJr5USznwiorNYj1zJ-ooKX4Bd-IABCQcallback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?AIzaSyCwJr5USznwiorNYj1zJ-ooKX4Bd-IABCQ&callback=initMap">
   </script>
 
   
