--- a/maps.html
+++ b/maps.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Project 3: Sayleht Varela</title>
-  <script src="js/script.js" defer></script>
   
-  <script async defer
+  <script src="js/script.js"></script>
+  
+  <script 
+    async 
+	defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwJr5USznwiorNYj1zJ-ooKX4Bd-IABCQ&callback=initMap">
   </script>
 
